kubernetes/apps/infrastructure-priv/buildkitd/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: buildkitd
spec:
  endpointSelector:
    matchLabels:
      app: buildkitd
  ingress:
    # allow woodpecker jobs to build stuff
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: woodpecker
      toPorts:
        - ports:
            - port: "1234"
              protocol: TCP
  egress:
    # allow DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # allow internal ingress
    - toEndpoints:
        - matchLabels:
              k8s:io.kubernetes.pod.namespace: routing
              app.kubernetes.io/instance: traefik-internal-routing
              app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: ANY
    # allow internet
    - toEntities:
      - world
